<FEAT> Relatório / Históricos

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "CalculadoraIMC"
+rootProject.name = "Relatorio"
 include ':app'
