--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,27 +2,33 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <application
-        android:allowBackup="true"
+    <application android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:theme="@style/AppTheme.NoStatusBar"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CalculadoraIMC"
         tools:targetApi="31">
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.CalculadoraIMC">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        <activity android:name=".Data_Activity"
+            android:theme="@style/AppTheme.NoStatusBar">
         </activity>
+        <activity android:name=".IMC_Activity"
+            android:theme="@style/AppTheme.NoStatusBar">
+        </activity>
+        <activity android:name=".Peso_activity"
+            android:theme="@style/AppTheme.NoStatusBar">
+        </activity>
+        <activity android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoStatusBar"
+            android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
+
     </application>
 
 </manifest>
